# ChangeLog for perl-core/Math-BigInt
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Math-BigInt/ChangeLog,v 1.88 2014/07/26 14:04:37 dilfridge Exp $

*Math-BigInt-1.997.0-r2 (26 Jul 2014)

  26 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +Math-BigInt-1.997.0-r2.ebuild, -Math-BigInt-1.997.0-r1.ebuild:
  EAPI bump, this time really

*Math-BigInt-1.999.300 (26 Jul 2014)
*Math-BigInt-1.997.0-r1 (26 Jul 2014)

  26 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -Math-BigInt-1.997.0.ebuild, +Math-BigInt-1.997.0-r1.ebuild,
  +Math-BigInt-1.999.300.ebuild:
  EAPI bump and version bump, bug 518064

  10 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  Math-BigInt-1.997.0.ebuild:
  Improve dependencies

  25 Jan 2014; Mikle Kolyada <zlogene@gentoo.org>
  +files/Math-BigInt-1.997.0-overload.patch, Math-BigInt-1.997.0.ebuild:
  fix overload warning (bug #427040)

  25 Aug 2013; Mikle Kolyada <zlogene@gentoo.org> -Math-BigInt-1.89.ebuild,
  -Math-BigInt-1.99.ebuild, -Math-BigInt-1.991.ebuild,
  -Math-BigInt-1.992.ebuild, -Math-BigInt-1.993.0.ebuild:
  drop old

  02 Mar 2013; Agostino Sarubbo <ago@gentoo.org> Math-BigInt-1.997.0.ebuild:
  Stable for sh, wrt bug #458122

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Math-BigInt-1.997.0.ebuild:
  Stable for sparc, wrt bug #458122

  21 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Math-BigInt-1.997.0.ebuild:
  Stable for ia64, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Math-BigInt-1.997.0.ebuild:
  Stable for arm, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Math-BigInt-1.997.0.ebuild:
  Stable for s390, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Math-BigInt-1.997.0.ebuild:
  Stable for alpha, wrt bug #458122

  19 Feb 2013; Agostino Sarubbo <ago@gentoo.org> Math-BigInt-1.997.0.ebuild:
  Stable for hppa, wrt bug #458122
