@@ -1,6 +1,10 @@
 # ChangeLog for perl-core/Math-BigInt
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Math-BigInt/ChangeLog,v 1.88 2014/07/26 14:04:37 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Math-BigInt/ChangeLog,v 1.89 2014/07/29 15:58:52 dilfridge Exp $
+
+  29 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
+  Math-BigInt-1.997.0-r2.ebuild, Math-BigInt-1.999.300.ebuild:
+  Use perl virtual
 
 *Math-BigInt-1.997.0-r2 (26 Jul 2014)
 
